fix horizontal scrolling

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -91,6 +91,10 @@
   }
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
